package com.exchange.me.domain;

import java.util.List;

public record EngineSnapshot(List<Order> orders) {}

