@startuml

top to bottom direction

title EngineService Snapshot Architecture

class EngineService {
    - orderBooks : Map<TradePair, OrderBookHandler>

    + createSnapshot() : EngineSnapshot
    + getAllOrders() : List<Order>
    + restoreOrders(orders : List<Order>)
    + resetAll()
    - getOrCreateBook(pair : TradePair)
}

class EngineSnapshot {
    - orders : List<Order>
}

class Order

class OrderBookHandler {
    + getAllOrders() : List<Order>
    + restoreOrder(order : Order)
    + reset()
}

class OrderIndex

class "Bids TreeMap" as Bids

class "Asks TreeMap" as Asks


EngineService "1" o-- "*" OrderBookHandler : orderBooks

EngineService --> EngineSnapshot : createSnapshot()
EngineService --> Order : getAllOrders()

EngineSnapshot "1" *-- "*" Order : orders

EngineService --> EngineSnapshot : restoreOrders()
EngineService --> OrderBookHandler : restoreOrder()

OrderBookHandler --> Bids
OrderBookHandler --> Asks
OrderBookHandler --> OrderIndex

OrderBookHandler --> Order : stores

@enduml